--- a/CODE/section-1.css
+++ b/CODE/section-1.css
@@ -14,15 +14,17 @@ main{
     flex-direction: column;
     justify-content: center;
     width: 100vw;
+    font-family: 'Roboto', sans-serif;
 }
 
 .content-1{
     display: inline-flex;
     width: 100%;
     height: 89vh;
-    background: url(../images/wave.svg);
+    background: url(images/wave.svg);
     background-repeat: no-repeat;
     background-position: bottom;
+    
 }
 
 /*Content 1 Part 1*/
@@ -33,6 +35,7 @@ main{
     align-items: center;
     gap: 1.5em;
     width: 15vw;
+
 }
 /* Three Circles in the left side*/
 .content-1 > div:first-child > span{
@@ -74,30 +77,33 @@ main{
 }
 
 .content-1 > div:nth-child(2) > h2{
-    font: bold 50px Coco Gothic;   
+    font: bold 50px 'Roboto', sans-serif;   
 }
 .content-1 > div:nth-child(2) > h5{
-    font: bold 16px Coco Gothic;   
+    font: bold 16px 'Roboto', sans-serif;   
     color: rgb(94, 92, 92);
     margin: 1em 0 1.5em 0;
 }
 
 .content-1 > div:nth-child(2) > p{
-    font: normal 14px Verdana;  
+    font: normal 14px 'Roboto', sans-serif;  
     margin-bottom: 3em; 
+    width: 70%;
+    line-height: 2em;
 
 }
 
 .content-1  input[type=button]{
-    display: flex;
+    display: inline-flex;
     justify-content: center;
-    width: 25%;
-    padding: 1em 1em;
+    width: 0;
+    padding: 1.2em 6em;
     border-radius: 5px;
     background-color: #fc4a4a;
     color: white;
     font: normal 14px Verdana;
     border: 0px;
+    
     
 }
 
@@ -106,7 +112,7 @@ main{
     align-items: center;
     font: bold 14px Tahoma;
     /* color: rgb(94, 92, 92); */
-    color: white;
+    color: rgb(100, 100, 100);
     gap:1em;
     margin: 24% 0 15% 1%;
 
@@ -123,6 +129,7 @@ main{
     display: inline-flex;
     justify-content: center;
     align-items: center;
+  
 }
 
 .content-1 > div:last-child > img {
@@ -134,9 +141,89 @@ main{
     margin-bottom:8em;
 
 }
-@media screen and (max-width:449){
+
+
+@media screen and (max-width:449px){
+
+    
+
+
+}
+
+@media screen and (max-width:1024px) {
+    
+    .header{
+        justify-content: center;
+    }
 
     .content-1{
-        margin-top: 2em;
+
+        flex-direction: column-reverse;
+        width: 100vw;
+        justify-content: center;
+        align-items: center;
+        gap: 0em;
+        margin-top: 10vh;
     }
+
+    .content-1 > div:first-child{
+        display: none;
+
+    }
+    .content-1 > div:nth-child(2){
+        display: inline-flex;
+        width: 80vw;
+        height: auto;
+        margin-top: 3vh;
+
+
+
+    }
+    .content-1 > div:last-child{
+        display: inline-flex;
+        width: 80vw;
+        margin-top: 5vh;
+     
+    }
+
+    
+    .content-1 > div:last-child > img {
+        display: inline-flex;
+        width: 30%;
+        /* background-color: #fc4a4a; */
+            /* border-radius: 51% 49% 51% 49% / 63% 66% 34% 37% ; */
+        /* border-radius: 59% 41% 46% 54% / 49% 63% 37% 51% ; */
+        height: auto;
+        margin-bottom: 0;
+        border-radius: 30px;
+        background-color:  white;
+
+        }
+
+        .content-1 > div:nth-child(2) > h2{
+            font: bold 25px Coco Gothic;   
+            width: 100%;
+            text-align: center;
+        }
+        .content-1 > div:nth-child(2) > h5{
+            text-align: center;
+            width: 100%;
+        }
+        .content-1 > div:nth-child(2) > p{
+            width: 100%;
+            text-align: center;    
+            font-size: 12px;
+        
+        }
+
+        .content-1  input[type=button]{
+
+            align-self: center;
+            
+        }
+
+        .scroll-down{
+            display: none;
+
+        }
 }
