--- a/CODE/section-2.css
+++ b/CODE/section-2.css
@@ -7,11 +7,11 @@
     height: auto;
     min-height:90vh ;
     gap: 3em;
-
+    font-family: 'Roboto', sans-serif;
     
 }
 .section-2 > h3:first-child{
-    font: bold 26px Coco Gothic;
+    font: bold 26px '';
     margin-bottom: 1em;
     color: rgb(50, 50, 50);
 
@@ -41,7 +41,7 @@
     justify-content: center;
     align-items: center;
     gap: 1em;
-    font: bold 20px Coco Gothic;
+    font: bold 20px 'Roboto', sans-serif;
     color: rgb(95, 95, 95);
 }
 .section-2 > div > span > h3 > img{
@@ -53,7 +53,7 @@
     flex: 1;
     padding: 4em 3em;
     text-align: justify;
-    font: normal 15px Tahoma;
+    font: normal 15px 'Roboto', sans-serif;
     line-height: 1.5em;
     background: rgba( 236, 236, 236, 0.25 );
     box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
@@ -61,6 +61,7 @@
     -webkit-backdrop-filter: blur( 4px );
     border-radius: 10px;
     border: 1px solid rgba( 255, 255, 255, 0.18 );
+    color: rgb(100, 100, 100);
     
 }
 
