--- a/footer.css
+++ b/footer.css
@@ -6,6 +6,7 @@ footer{
     background-color: white;
     padding: 3em 5em 2.5em;
     font-family: Montserrat;
+
     
 }
 
@@ -30,4 +31,23 @@ footer > h5{
 .soc-icons > img{
     width: 1.5%;
     height: auto;
+}
+
+@media only screen and (max-width: 415px) {
+    .soc-icons {
+        margin-top: 2em;
+    }
+    .soc-icons > img{
+        width: 5%;
+        height: auto;
+    }
+
+    footer > h5{
+        font-size: 10px;
+    }
+
+    footer > h3{
+        font-size: 12px;
+    }
+
 }
