--- a/section-1.css
+++ b/section-1.css
@@ -94,13 +94,113 @@
     height: auto;
 }
 
+#section-1 > div:last-child{
+    display: inline-flex;
+    flex-direction: column;
+    align-items: center;
 
-
-
-
-
-
+}
 #section-1 > div:last-child >img{
     width: 70%;
     height: auto;
+}
+
+#section-1 > div:last-child >h4{
+    display: none;
+}
+
+
+
+/* MEDIA QUERY FOR MOBILE PHONE*/
+
+@media only screen and (max-width: 415px) {
+
+    #section-1{
+        grid-template-columns: 100vw;
+        grid-template-rows: auto auto;
+        padding-bottom: 2em;
+    }
+
+    #section-1 > div:last-child{
+        grid-area: 1/1/2/2;
+    }
+    #section-1 > div:first-child{
+        grid-area: 2/1/3/2;
+    }
+
+    #section-1 > div:last-child{
+        display: inline-flex;
+        justify-content: center;
+
+
+    }
+
+
+    #section-1 > div:first-child{
+        display: inline-flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    #section-1 > div:first-child > *{
+        margin-left: 0;   
+    }
+
+    /* WEB DEVELOPER*/
+    #section-1 > div:first-child > h4{
+    display: none;
+    }
+
+    #section-1 > div:first-child > h1{
+        margin-top: 5%;
+        font: bold 20px Roboto;
+        text-align: center;
+    }
+
+    #section-1 > div:first-child > p{
+        width: 80%;
+        text-align: center;
+        font-size: 12px;
+        color: #747474;
+        margin-top: 5%;
+    }
+
+    #section-1 > div:first-child > span > button{
+
+        padding: 1em 2em;
+        font: bold 12px Inter;
+        border-width: 1px;
+    }
+
+    #section-1 > div:first-child > span > h3{
+
+
+        font: bold 12px Inter;
+
+    }
+
+    #section-1 > div:first-child > span{
+ 
+        font: bold 12px Inter;
+        gap:2em;
+
+    }
+
+    #section-1 > div:first-child > div >span{
+
+        color: #747474;
+        font: normal 10px Roboto;
+    }   
+
+
+    #section-1 > div:last-child >h4{
+        font: bold 10px Roboto;
+        display: inline-flex;
+        color: #00BEC1;
+        text-align: center;
+        font-size: 12px;
+        margin-bottom: 2em;
+    }
+
+
 }
