--- a/section-2.css
+++ b/section-2.css
@@ -1,7 +1,7 @@
 #section-2{
     display: grid;
     grid-template-columns: 40vw 60vw;
-    grid-template-rows: auto auto;
+    grid-template-rows: auto auto auto;
     background-color: white;
     padding-bottom: 8em;
     width: 100vw;
@@ -12,18 +12,9 @@
     text-align: center;
     padding: 4em 0 5em 0;
 }
-.subjects{
-    grid-area: 2, 1, 2,2;
 
-    display: inline-flex;
-    flex-direction: column;
-    align-items: flex-end;
-
-    gap: 1.8em;
-    padding-bottom: 1em;
-}
 .sub-desc{
-    grid-area: 2, 2, 2,3;
+    grid-area: 2/ 2/ 2/3;
 }
 
 
@@ -46,9 +37,25 @@
 
 
 /*button*/
+.subjects{
+    grid-area: 2/ 1/2/2;
+    display: inline-flex;
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 1.27em;
+    padding-bottom: 1em;
 
+}
 
-.subjects > div {
+.subjects > span {
+    display: inline-flex;
+    flex-direction: column;
+    align-items: flex-end;
+    gap:1.27em;
+    width: 100%;
+
+}
+.subjects > span > div {
     display: inline-flex;
     /* background-color: #4F8A8B; */
     border: 2px solid  #4F8A8B;
@@ -73,10 +80,8 @@
 .sub-desc{
     display: inline-flex;
     overflow: hidden;
-    grid-area: 2, 2, 2,3;
+    grid-area: 2/ 2/ 2 /3;
     padding-bottom: 1em;
-   
-
 }
 
 .sub-desc > div{
@@ -185,3 +190,122 @@
     transition: 4s 4s ease;
 }
 
+@media only screen and (max-width: 415px) {
+
+    #section-2{
+        grid-template-columns: 100vw;
+        grid-template-rows: auto auto auto;
+        padding-bottom: 5em;
+    }
+
+    #section-2 > *{
+
+        padding: 0;
+    }
+
+    #section-2-header{
+        grid-area: 1/1/2/2;
+        padding: 0;
+
+    }
+    .section-2-header > h5{
+        margin-top: 2em;
+        font-size: 20px;
+
+    }
+
+    .section-2-header > p{
+        width: 80%;
+        margin: 1em;
+        line-height: 1.8em;
+        font-size: 12px;
+        display: inline-flex;
+        justify-content: center;
+     
+    }
+
+    .subjects{
+        flex-direction: row;
+        padding: 0;
+        margin: 0;
+        grid-area: 2/1/3/2;
+        align-items: center ;
+        height: 15vh;
+        width: 100%;
+        
+    }
+
+    .subjects > span:first-child {
+        width: 100%;
+
+        align-items: flex-end;
+    }
+
+    .subjects > span:last-child {
+        width: 100%;
+
+        align-items: flex-start;
+    }
+
+    .subjects > span > div {
+    display: inline-flex;
+    border: 2px solid  #4F8A8B;
+    width: 70%;
+    font: bold 10px Inter;
+}
+
+
+.subjects > span {
+    gap: .5em;
+}
+.subjects {
+    gap: .5em;
+}
+
+.sub-desc{
+
+    justify-content: center;
+    grid-area: 3/1/4/2;
+    padding-bottom: 3em;
+    width: 100vw;
+}
+.sub-desc > div{
+    
+    margin-left: 0em;
+    width: 70%;
+    max-width: 70%;
+    padding: 0 0 1em 0;
+    
+
+   
+}
+
+
+
+.sub-desc > div  > span> h3 {
+    font: bold 12px Roboto;
+    color: #00BEC1;
+}
+
+.sub-desc > div  >p {
+
+    font-size: 10px;
+    
+}
+.sub-desc > div > span {
+  
+    padding: 2em 2em 1em 2em;
+    
+    
+}
+.sub-desc > div > span > img{
+    /* margin: 2em 1em 2em 3em; */
+
+   margin: 0 .5em 0 0;
+}
+
+.sub-desc > div > span > h3{
+
+}
+
+}
